18. 머티어리얼 디자인   - ActionBar의 오른쪽 점3개 메뉴 클릭시 로그인/로그아웃/다음 키 수행   - 왼쪽 NavigationDrawer 활용

--- a/18_MaterialDesign/src/main/res/layout/activity_main.xml
+++ b/18_MaterialDesign/src/main/res/layout/activity_main.xml
@@ -9,10 +9,21 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_main"
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/mission2_textView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Navigation View Test"
+            android:textStyle="bold"
+            android:textSize="30dp"
+            android:gravity="center"/>
+    </RelativeLayout>
+
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
